added unit test for User class (incomplete)